--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -160,7 +160,7 @@
 
 .control-label,
 .grid-heading-row {
-	color: var(--text-light);
+	color: var(--text-color);
 	font-size: var(--text-sm);
 }
 
