--- a/frappe/public/scss/desk/global.scss
+++ b/frappe/public/scss/desk/global.scss
@@ -15,12 +15,12 @@ a,
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	color: var(--text-muted);
+	color: var(--text-color);
 	font-weight: var(--weight-regular);
 	background-color: var(--bg-color);
 
 	&.full-width {
-	@include media-breakpoint-up(md) {
+		@include media-breakpoint-up(md) {
 			.container {
 				width: calc(100vw - 16px); // @dokos
 				max-width: 100%;
