--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -227,7 +227,7 @@
 	margin-right: 15px;
 
 	a {
-		color: var(--text-light);
+		color: var(--text-color);
 	}
 
 	& > [data-sort-by]:hover {
