--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -186,7 +186,7 @@ body[data-route^="Module"] .main-menu {
 		margin-bottom: var(--margin-sm);
 		display: flex;
 		align-items: center;
-		color: var(--text-light);
+		color: var(--text-color);
 		.icon {
 			margin: 0;
 			margin-right: var(--margin-xs);
